Updated gradle version and build.gradle