@@ -1,15 +1,13 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.17.2'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.beryx.jlink' version '2.21.1'
 }
 
 version '1.0'
 
 sourceCompatibility = 11
-
-group 'sim'
 
 repositories {
     mavenCentral()
@@ -19,9 +17,8 @@ repositories {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.jfoenix:jfoenix:9.0.10'
-    compile 'org.junit.jupiter:junit-jupiter:5.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.11.1'
 }
 
 javafx{
@@ -38,11 +35,14 @@ run {
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
             "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
             "--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix",
-            "--add-opens=java.base/java.lang.reflect=com.jfoenix",
+            "--add-opens=java.base/java.lang.reflect=com.jfoenix"
     ]
 }
 
-mainClassName = 'warriorSim.Classic/sim.Main'
+application{
+    mainModule = 'warriorSim.Classic'
+    mainClass = 'sim.Main'
+}
 
 jlink{
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
@@ -56,10 +56,14 @@ jlink{
                 "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
                 "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
                 "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
+                "--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix",
                 "--add-opens=java.base/java.lang.reflect=com.jfoenix",
-
+                "-Dlog4j.configurationFile=log4j2.xml"
         ]
     }
+
+    forceMerge('log4j-api')
+
     jpackage {
         // Set the environment property BADASS_JLINK_JPACKAGE_HOME or explicitly configure the below property
         jpackageHome = 'C:/Program Files/AdoptOpenJDK/jdk-14.0.0.36-hotspot'
